fixed issue with mobile nav taking up space despite it not being visible
when the mobile nav was closed,
the user could still scroll left and reveal the space where the mobile nav would appear

this was solved by changing the width of the mobile nav to 0
when the nav is closed
a transition property manages the width when the mobile nav is open

--- a/web/app/themes/ppj/src/sass/components/mobile-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/mobile-nav.sass
@@ -9,12 +9,11 @@ $mobileNavWidthPortrait: 48rem
   color: $color-white
   min-height: 100vh
   left: 100%
+  overflow-x: hidden
   position: absolute
   top: 0
-  width: $mobileNavWidth
-
-  @include bp('portrait')
-    width: $mobileNavWidthPortrait
+  transition: width 0s $main-transition-duration
+  width: 0
 
   &__overlay
     background-color: $color-dark
@@ -30,13 +29,18 @@ $mobileNavWidthPortrait: 48rem
   .nav-menu-is-open &
     height: 100vh
     overflow-y: auto
+    transition: width 0s 0s
+    width: $mobileNavWidth
+
+    @include bp('portrait')
+      width: $mobileNavWidthPortrait
 
     &__overlay
       opacity: 0
       transition: opacity $main-transition-duration ease 0s, z-index 0s $main-transition-duration
       z-index: -1
 
-  @include bp('large')
+  @include bp('landscape')
     display: none
 
   &__current-leg-element
